Minor. Fixing z-index for overlapping search and drop down nav.

--- a/packages/custom/rizers/public/assets/css/rize/filter.less
+++ b/packages/custom/rizers/public/assets/css/rize/filter.less
@@ -9,7 +9,7 @@
 	position: fixed;
 		top: 5rem;
 	width: 100%;
-	z-index: 9999;
+	z-index: 9990;
 }
 
 .rize-list-filter {
